--- a/dts.gui/MainWindow.xaml
+++ b/dts.gui/MainWindow.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        <Button Content="Button" Height="23" HorizontalAlignment="Left" Margin="176,172,0,0" Name="button1" VerticalAlignment="Top" Width="75" Click="button1_Click" />
+        <Button Content="Subscribe" Height="23" HorizontalAlignment="Left" Margin="41,57,0,0" Name="button1" VerticalAlignment="Top" Width="75" Click="button1_Click" />
+        <Button Content="Unsubscribe" Height="21" HorizontalAlignment="Left" Margin="153,59,0,0" Name="button2" VerticalAlignment="Top" Width="75" Click="button2_Click" />
     </Grid>
 </Window>
