--- a/dts.gui/MainWindow.xaml
+++ b/dts.gui/MainWindow.xaml
@@ -1,8 +1,8 @@
 ﻿<Window x:Class="dts.gui.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:View="clr-namespace:dts.gui.View"
         Title="MainWindow">
     <Grid>
-        
+        <View:DataGrid DataContext="{Binding PersonDataGridViewModel}"/>
     </Grid>
 </Window>
