--- a/dts.gui/View/DataGrid.xaml
+++ b/dts.gui/View/DataGrid.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:View="clr-namespace:dts.gui.View">
 
     <DataGrid Name="dataGrid"
+        Margin="5"
         ItemsSource="{Binding Items}"
         AutoGenerateColumns="False"/>
 
