--- a/dts.gui/View/DataGrid.xaml
+++ b/dts.gui/View/DataGrid.xaml
@@ -4,9 +4,21 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:View="clr-namespace:dts.gui.View">
 
-    <DataGrid Name="dataGrid"
-        Margin="5"
-        ItemsSource="{Binding Items}"
-        AutoGenerateColumns="False"/>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="25"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        
+        <StackPanel Orientation="Horizontal" Grid.Row="0" Margin="5" HorizontalAlignment="Right">
+            <TextBlock Text="Number of Records: "/>
+            <TextBlock Text="{Binding Items.Count}" />
+        </StackPanel>
 
+        <DataGrid Name="dataGrid"
+            Grid.Row="1"
+            Margin="5"
+            ItemsSource="{Binding Items}"
+            AutoGenerateColumns="False"/>
+    </Grid>
 </View:ViewBase>
